--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- /.header -->
         <div class="page-content container">
             <main class="main">
-                <h1 class="main-title">Your website<br> starts here</h1>
+                <p class="main-title">Your <span>website</span><br> starts here</p>
                 <p class="description">Sketch is the home for your entire collaborative design process. From early ideas to pixel-perfect artwork, playable prototypes and developer handoff. It all starts here.</p>
                 <div class="button-group">
                     <a href="#" class="button button-start">Get started for free</a>
@@ -94,13 +94,13 @@
             <div class="design_column">               
                 <img src="img/screen.jpg" alt="screen" class="screen">
                 <p class="design_pre-text">New in Sketch</p>
-                <h2 class="design_title">Collaborate in real-time</h2>
+                <p class="design_title">Collaborate in real-time</p>
                 <p class="design_text">Work together in the same document, at the same time, right inside the Mac app. With everyone (literally) on the same page, you can see everyone’s best ideas in one place — as soon as they have them.</p>
                 <p class="design_subtext">Discover real-time collaboration</p>
             </div>
             <div class="design_column">
                 <p  class="design_pre-text">Design</p>
-                <h2 class="design_title">Tools that help your work shine</h2>
+                <p class="design_title">Tools that help your work shine</p>
                 <p class="design_text">With an intuitive interface, thoughtful features and all the power of a native macOS app, you can stay focused on creating incredible things — from pixel-perfect icons, to your next breakthrough product.</p>
                 <p class="design_subtext">Explore your design toolkit</p>
                 <img src="img/screen2.jpg" alt="screen2" class="design-img">
@@ -116,7 +116,7 @@
             <img src="img/webcollaborate.jpg" alt="collaborate_image" class="collaborate_image">
             <div class="collaborate_text-info">
                 <p class="colaborate_pre-title">Collaborate</p>
-                <h2 class="collaborate_title">Open up the design process</h2>
+                <p class="collaborate_title">Open up the design process</p>
                 <p class="collaborate_text">Get fast feedback from stakeholders, share prototypes for testing and give your developers everything they need for handoff. All using powerful, browser-based tools that your people can access for free.</p>
                 <p class="collaborate_subtext">See collaboration in action</p>
             </div>
@@ -133,7 +133,7 @@
                 <div class="workspace">
                     <img src="img/workspace-image.jpg" alt="workspace" class="workspace_image">
                     <p class="workspace_pre-title">Workspaces</p>
-                    <h2 class="workspace_title">Bring people and projects together</h2>
+                    <p class="workspace_title">Bring people and projects together</p>
                     <p class="workspace_text">Keep all your documents together, in sync and available anywhere with your Workspace. Everyone gets the access they need, with full version history for every document. And it’s all included in your subscription — no need to pay for extra storage.</p>
                     <p class="workspace_subtext">Create your Workspace in minutes</p>
                 </div>
@@ -144,7 +144,7 @@
         <div class="design-systems-info">
             <div class="design-systems_text-info">
                 <p class="design-systems_pre-title">Design Systems</p>
-                <h2 class="design-systems_title">Scale up, share instantly</h2>
+                <p class="design-systems_title">Scale up, share instantly</p>
                 <p class="design-systems_text">Lay the foundations for your product’s design system with reusable Styles and responsive Symbols that automatically scale to fit their content. Then share them effortlessly and update them everywhere in seconds.</p>
                 <p class="design-systems_subtext">Sketch for design systems</p>
             </div>
@@ -156,7 +156,7 @@
                     <img src="img/Developer-image.jpg" alt="workspace" class="handoff_image">
                     <div class="handoff_words-block">
                         <p class="handoff_pre-title">Developer Handoff</p>
-                        <h2 class="handoff_title">Handoff without hassle</h2>
+                        <p class="handoff_title">Handoff without hassle</p>
                         <p class="handoff_text">Invite developers to view, inspect and measure designs, in any browser, on any operating system. They can download<br> pixel-perfect, production-ready assets — no Mac app or third-party plugins needed.</p>
                         <p class="handoff_subtext">Prepare for handoff</p>
                     </div>
@@ -183,14 +183,14 @@
         </div>
         <div class="extensions-block">
             <p class="extensions_pre-title">Extensions</p>
-            <h2 class="extensions_title">Customize your workflow</h2>
+            <p class="extensions_title">Customize your workflow</p>
             <p class="extensions_text">Choose from hundreds of plugins, Assistants and integrations that let you do everything from animating interactions to making your designs more accessible. Still can’t find exactly what you need? Our open file system means it’s easy to build your own extensions.</p>
             <p class="extensions_subtext">Browse 700+ extensions</p>
         </div>
     </section>
     <section class="last-news section">
         <div class="container">
-            <h2 class="last-news_title">Latest news</h2>
+            <p class="last-news_title">Latest news</p>
             <div class="news-cards">
                 <div class="card">
                     <a href="#" class="card-link">
@@ -198,7 +198,7 @@
                     </a>
                     <div class="card-header">
                         <a href="#" class="card-link">
-                            <h3 class="card-title">Behind the scenes: How we made the Sketch 2021 video</h3>
+                            <p class="card-title">Behind the scenes: How we made the Sketch 2021 video</p>
                         </a>
                     </div>
                     <p class="card-text">15 July 2021</p>
@@ -209,7 +209,7 @@
                     </a>
                     <div class="card-header">
                         <a href="#" class="card-link">
-                            <h3 class="card-title">Welcome to Workspaces: Getting feedback and testing your designs</h3>
+                            <p class="card-title">Welcome to Workspaces: Getting feedback and testing your designs</p>
                         </a>
                     </div>
                     <p class="card-text">13 July 2021</p>
@@ -220,7 +220,7 @@
                     </a>
                     <div class="card-header">
                         <a href="#" class="card-link">
-                            <h3 class="card-title">Welcome to Workspaces: Sharing your work</h3>
+                            <p class="card-title">Welcome to Workspaces: Sharing your work</p>
                         </a>
                     </div>
                     <p class="card-text">6 July 2021</p>
@@ -234,7 +234,7 @@
                 <svg width="64" height="58" viewBox="0 0 64 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.758204 19.9709L13.5846 2.56368C13.8494 2.2043 14.2523 1.97188 14.696 1.92259L31.8233 0.0195516C31.9407 0.00650362 32.0593 0.00650362 32.1767 0.0195516L49.304 1.92259C49.7477 1.97188 50.1506 2.2043 50.4154 2.56368L63.2418 19.9709C63.6852 20.5727 63.6529 21.4013 63.1639 21.9667L32.9076 56.9505C32.4741 57.4517 31.7163 57.5067 31.215 57.0731C31.1712 57.0352 31.1302 56.9943 31.0924 56.9505L0.836112 21.9667C0.347135 21.4013 0.314789 20.5727 0.758204 19.9709ZM35.6463 3.74747L48.471 16.9285C48.7792 17.2452 49.2856 17.2521 49.6023 16.944C49.7715 16.7794 49.8593 16.5485 49.8424 16.3131L49.1849 7.19308C49.173 7.02782 49.2973 6.8842 49.4626 6.87228C49.608 6.8618 49.7398 6.95734 49.7752 7.09876L52.2287 16.9146C52.3973 17.589 52.9039 18.1275 53.5668 18.3368L60.1441 20.4138C60.3021 20.4637 60.3897 20.6323 60.3398 20.7903C60.3004 20.9151 60.1846 20.9999 60.0537 20.9999H53.6464C52.9363 20.9999 52.2795 21.3764 51.9206 21.9891L36.9962 47.4698C36.8566 47.7081 36.5503 47.7881 36.3121 47.6485C36.0906 47.5188 36.0033 47.2426 36.11 47.0092L47.2233 22.6988C47.4989 22.0961 47.2336 21.3841 46.6309 21.1086C46.4743 21.037 46.3041 20.9999 46.132 20.9999H17.868C17.2053 20.9999 16.668 21.5372 16.668 22.1999C16.668 22.3721 16.7051 22.5422 16.7766 22.6988L27.89 47.0092C28.0048 47.2604 27.8942 47.557 27.6431 47.6718C27.4097 47.7785 27.1335 47.6912 27.0038 47.4698L12.0794 21.9891C11.7205 21.3764 11.0637 20.9999 10.3536 20.9999H3.7619C3.59622 20.9999 3.4619 20.8656 3.4619 20.6999C3.4619 20.5683 3.54771 20.452 3.67351 20.4132L10.4219 18.3324C11.0911 18.126 11.6036 17.5847 11.7731 16.9053L14.2197 7.09894C14.2598 6.93819 14.4227 6.84038 14.5834 6.88049C14.7249 6.91577 14.8205 7.04761 14.81 7.193L14.1566 16.3145C14.125 16.7552 14.4566 17.1381 14.8973 17.1696C15.1326 17.1865 15.3634 17.0987 15.5279 16.9296L28.3537 3.74747C28.4693 3.62872 28.6592 3.62612 28.778 3.74166C28.8872 3.84794 28.8994 4.01924 28.8063 4.13992L19.4941 16.2113C19.2242 16.5611 19.289 17.0635 19.6389 17.3333C19.7789 17.4413 19.9507 17.4999 20.1275 17.4999H43.8725C44.3143 17.4999 44.6725 17.1417 44.6725 16.6999C44.6725 16.5231 44.6139 16.3513 44.5059 16.2113L35.1937 4.13992C35.0925 4.00873 35.1168 3.82034 35.248 3.71914C35.3687 3.62605 35.54 3.63823 35.6463 3.74747Z" fill="black"/>
                 </svg>      
-                <h1 class="start_main-title">Get started for free</h1>
+                <p class="start_main-title">Get started for free</p>
                 <p class="start_description">Join over a million people using Sketch to create, collaborate and bring their ideas to life.</p>
                 <p class="start_description">Get started today with a 30-day free trial — no credit card required.</p>
                 <div class="button-group">
